Correzioni su classi deprecate, Class.newIstabce(),Double(double)